@@ -130,7 +130,9 @@
 
 - (void) resetData {
     if (nil != _dtf) {  // not self as don't want to instantiate prematurely
-        self.dtf.text = @"";
+        dispatch_async(dispatch_get_main_queue(), ^(void){
+            self.dtf.text = @"";
+        });
     }
     self.vo.useVO = YES;
 }
