@@ -83,7 +83,9 @@
 
 - (void) resetData {
     if (nil != _dtf) { // not self, do not instantiate
-        self.dtf.text = @"";   
+        dispatch_async(dispatch_get_main_queue(), ^(void){
+            self.dtf.text = @"";
+        });
     }
     self.vo.useVO = YES;
 }
